--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <div class="pic7">
           <h5 class="black">Popular posts</h5>
           <img src="assets/images/image_8.png" alt="" />
-          <a href=""
+          <a href="#"
             ><h5 class="black">
               One of Saturn’s largest rings <br />may be newer than anyone
             </h5></a
@@ -156,7 +156,7 @@
         </div>
         <div class="pic8">
           <img src="assets/images/image_10.png" alt="" />
-          <a href=""
+          <a href="#"
             ><h5 class="black">
               One of Saturn’s largest rings <br />may be newer than anyone
             </h5></a
@@ -165,7 +165,7 @@
         </div>
         <div class="pic9">
           <img src="assets/images/image_11.png" alt="" />
-          <a href=""
+          <a href="#"
             ><h5 class="black">
               One of Saturn’s largest rings <br />may be newer than anyone
             </h5></a
